# parallel-computing-ws-25-26

./: pi_experiment.sh  slurmSubmit.sh  submit_all_experiments.sh
ex1/: a.out  pi.c  pi_threads.c
ex2/: CMakeLists.txt  counts3s.c  hello.c  matrix_vector.c
ex3/: CMakeLists.txt  exeercise_three.c
ex4/: CMakeLists.txt  matmul.c
ex5/: CMakeLists.txt  pi.c  pi_blk.c  pi_cyc.c  pi_par_critical.c  pi_par_loop.c  pi_seq.c
ex8/: fib.c  slurmsubmit.sh
ex9/: ping_pong.c  slurmSubmit.sh
